web-infras/parser/tests/fixtures/esprima/es2017/async/arrows/invalid-async-line-terminator2/output.txt
[SyntaxError]: No line break is allowed before '=>' (2,1)
2|=> await a
 |^
